Fixed z-index for lang selector

--- a/src/DTL/CoolAndBedBundle/Resources/public/css/main.css
+++ b/src/DTL/CoolAndBedBundle/Resources/public/css/main.css
@@ -49,6 +49,10 @@
     font-size: 20px;
 }
 
+.language-nav {
+    z-index: 20;
+}
+
 a.thumbnail {
     display: block;
     background-color: #fff;
@@ -85,7 +89,7 @@ footer ul li a {
 }
 
 #headerCont {
-    z-index: 100;
+    z-index: 10;
 }
 
 .main-nav ul.nav li a {
